fix 1-column template contrast errors

--- a/app/assets/stylesheets/base/colors.scss
+++ b/app/assets/stylesheets/base/colors.scss
@@ -1,40 +1,40 @@
 /* Standard Colors
 ---------------------------------------- */
-$red:         #a50034;
-$black:       #2f2f2f;
-$warm-gray:   #edeade;
-$cool-gray:   #ecebe5;
+$red: #a50034;
+$black: #2f2f2f;
+$warm-gray: #edeade;
+$cool-gray: #ecebe5;
 
 /* Accent Colors
 ---------------------------------------- */
-$blue:        #407892;
-$light-blue:  #02bac1;
-$green:       #25b6a4;
+$blue: #294d5e;
+$light-blue: #018085;
+$green: #1a8577;
 $light-green: #c6dbd2;
-$yellow:      #fed03d;
-$gold:        #f39c12;
-$orange:      #e35c4a;
-$purple:      #9b2672;
-$gray-slate:  #62605a;
-$gray-smoke:  #9a9996;
-$gray-mist:   #cbcac5;
+$yellow: #fed03d;
+$gold: #a16708;
+$orange: #992718;
+$purple: #9b2672;
+$gray-slate: #62605a;
+$gray-smoke: #9a9996;
+$gray-mist: #cbcac5;
 $gray-cement: #e2e2e1;
 
 /* Social Network Colors
 ---------------------------------------- */
-$facebook-blue:  #38659f;
-$twitter-blue:   #3aa8dd;
+$facebook-blue: #38659f;
+$twitter-blue: #3aa8dd;
 $instagram-gray: #333333;
-$pinterest-red:  #cb2027;
+$pinterest-red: #cb2027;
 
 /* Status Colors
 ---------------------------------------- */
-$primary-color:   $red;
+$primary-color: $red;
 $secondary-color: $cool-gray;
-$info-color:      $blue;
-$success-color:   $green;
-$warning-color:   $gold;
-$danger-color:    $orange;
+$info-color: $blue;
+$success-color: $green;
+$warning-color: $gold;
+$danger-color: $orange;
 
 /* Layout Colors
 ---------------------------------------- */
@@ -42,18 +42,18 @@ $body-bg-color: $warm-gray;
 
 /* Typography Colors
 ---------------------------------------- */
-$text-color:    $black;
-$link-color:    $red;
+$text-color: $black;
+$link-color: $red;
 
 /* Form Colors
 ---------------------------------------- */
-$input-bg-color:            white;
-$input-text-color:          $black;
-$input-placeholder-color:   $gray-smoke;
-$input-disabled-bg-color:   $gray-cement;
+$input-bg-color: white;
+$input-text-color: $black;
+$input-placeholder-color: $gray-smoke;
+$input-disabled-bg-color: $gray-cement;
 $input-disabled-text-color: $gray-smoke;
-$input-border-color:        $gray-mist;
-$input-focus-border-color:  $blue;
+$input-border-color: $gray-mist;
+$input-focus-border-color: $blue;
 
 $tooltip-bg-color: $black;
 $tooltip-text-color: white;
@@ -69,33 +69,33 @@ $tooltip-text-color: white;
 
 
 // Element Rows
-$color-row-bg:       #FAFAFA;
+$color-row-bg: #FAFAFA;
 $color-row-bg-hover: #FFFDF0;
-$color-row-border:   #CCCCCC;
+$color-row-border: #CCCCCC;
 
 
 // Background colors
-$bg-light-gray:      #eaeaea;
-$bg-platinum-gray:   #e5e5e5;
-$bg-silver-gray:     #cfcfcf;
-$bg-off-white:       #f2f2f0;
-$bg-red:             #a50034;
+$bg-light-gray: #eaeaea;
+$bg-platinum-gray: #e5e5e5;
+$bg-silver-gray: #cfcfcf;
+$bg-off-white: #f2f2f0;
+$bg-red: #a50034;
 
 
 // Type colors
-$color-dark-gray:    #2f2f2f;
-$color-medium-gray:  #676767;
-$color-light-gray:   #9a9996;
-$color-green:        #43ac6a;
-$color-yellow:       #cc6700;
+$color-dark-gray: #2f2f2f;
+$color-medium-gray: #555;
+$color-light-gray: #9a9996;
+$color-green: #43ac6a;
+$color-yellow: #cc6700;
 
 
 // CU Brand Colors
-$color-chapman-red:  #a50034;
+$color-chapman-red: #a50034;
 $color-chapman-blue: #407892;
 $color-chapman-gray: #dad8cf;
 
 
 // Selection colors
 $selection-background: rgba($cu-red, 0.875);
-$selection-color:    #ffffff;
+$selection-color: #ffffff;
